cabal-version: 3.4
name: basic-block
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2022 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Block
  build-depends:
    , base >=4.14.3.0
    , primitive >=0.7.4
    , run-st >=0.1.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
